[package]
name = "nonmaxunsigned"
version = "0.1.0"
edition = "2024"
authors = ["Burkhard Mittelbach <burkhard@mittelbach-online.de>"]
description = "A NonMax integer implementation not relying on NonZero"
repository = "https://github.com/Wasabi375/nonmaxunsigned"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["nonmax", "non-max", "niche", "option", "no-std"]
rust-version = "1.85"


[features]

default = ["checked-ops"]

checked-ops = []

[dependencies]


