[package]
name = "nonmaxunsigned"
version = "0.1.0"
edition = "2024"
authors = ["Burkhard Mittelbach <burkhard@mittelbach-online.de>"]
description = "A NonMax integer implementation not relying on NonZero"
repository = "https://github.com/Wasabi375/nonmaxunsigned"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["nonmax", "non-max", "niche", "option", "no-std"]
rust-version = "1.87"   # also update in .github/workflow/check.yml msrv


[features]

default = ["checked-ops"]

checked-ops = []

[dependencies]

[package.metadata.release]
allow-branch = ["main"]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/wasabi375/nonmaxunsigned/compare/{{tag_name}}...HEAD", exactly=1},
]
