[package]
name = "nonmaxunsigned"
version = "1.0.0"
edition = "2024"
authors = ["Burkhard Mittelbach <burkhard@mittelbach-online.de>"]
description = "A NonMax integer implementation not relying on NonZero"
repository = "https://github.com/Wasabi375/nonmaxunsigned"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["nonmax", "non-max", "niche", "option", "no-std"]
rust-version = "1.88"   # also update in .github/workflow/check.yml msrv


[features]

default = ["checked-ops"]

checked-ops = []

endian-conversion = []

[dev-dependencies]
strum = "0.27.1"
strum_macros = "0.27.1"

# required for minimal version test
syn = "2.0.104"
proc-macro2 = "1.0.95"
quote = "1.0.40"



[package.metadata.release]
allow-branch = ["main"]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/wasabi375/nonmaxunsigned/compare/{{tag_name}}...HEAD", exactly=1},
  {file="README.md", search="https://docs.rs/nonmaxunsigned/0.1.0", replace="https://docs.rs/nonmaxunsigned/{{version}}", exactly=1},
]
